2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Don't
	  use FontDesc to change the font of the text renderer, since
	  it overrides the font weight specified using markup. Fixes
	  bug #595975 - Start project is no longer highlighted.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	* MonoDevelop.Ide.NavigateToDialog/ResultsDataSource.cs:
	  Ensured that the workers are working on a non-shared state.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs:
	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/ICompletionData.cs:
	* MonoDevelop.Ide.NavigateToDialog/ResultsDataSource.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs: code
	  completion list now can show descriptions & code completion
	  list now has a width resize for long items.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs: Improved
	  completion filtering.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Fixed 'Bug
	  599684 - Wrong text link in the 2,3,etc lines of the
	  template'.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Execution/ExecutionModeCommandService.cs:
	  Added missing null check.

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Workaround for
	  gtk-sharp bug #600463. The OnPageAdded override makes MD
	  crash on windows.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  It's now possible to do custom code completion popups.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: Changed shortcut.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>
